[gd_scene load_steps=18 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font/Squares Bold Free.otf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/game/increase_button.png" type="Texture" id=4]
[ext_resource path="res://assets/game/disabled_increase_button.png" type="Texture" id=5]
[ext_resource path="res://assets/game/decrease_button.tex" type="Texture" id=6]
[ext_resource path="res://assets/game/disabled_decrease_button.png" type="Texture" id=7]
[ext_resource path="res://assets/game/health_bar.png" type="Texture" id=8]
[ext_resource path="res://assets/sound/Blip_Select.wav" type="Sample" id=9]
[ext_resource path="res://scripts/camera.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]

font/size = 84
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 48
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 30
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="SampleLibrary" id=4]

samples/Blip_Select = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[sub_resource type="DynamicFont" id=5]

font/size = 120
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]

font/size = 64
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]

font/size = 36
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[node name="game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="player" parent="." instance=ExtResource( 2 )]

transform/pos = Vector2( 960, 540 )
z/z = 0

[node name="shop" type="Panel" parent="."]

process/pause_mode = 2
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 164.0
margin/right = 1510.0
margin/bottom = 914.0

[node name="title" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 245.0
margin/top = 30.0
margin/right = 856.0
margin/bottom = 131.0
custom_fonts/font = SubResource( 1 )
text = "trade shop"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="damage" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 210.0
margin/right = 336.0
margin/bottom = 266.0
custom_fonts/font = SubResource( 2 )
text = "Damage"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fire rate" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 380.0
margin/right = 392.0
margin/bottom = 436.0
custom_fonts/font = SubResource( 2 )
text = "Fire Rate"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="regen" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 640.0
margin/top = 210.0
margin/right = 827.0
margin/bottom = 266.0
custom_fonts/font = SubResource( 2 )
text = "Regen"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="speed" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 640.0
margin/top = 380.0
margin/right = 876.0
margin/bottom = 436.0
custom_fonts/font = SubResource( 2 )
text = "Speed"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="health" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 444.0
margin/top = 524.0
margin/right = 680.0
margin/bottom = 580.0
custom_fonts/font = SubResource( 2 )
text = "Health"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="health_amount" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 100.0
margin/top = 630.0
margin/right = 202.0
margin/bottom = 686.0
custom_fonts/font = SubResource( 2 )
text = "100"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="damage_amount" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 500.0
margin/top = 210.0
margin/right = 602.0
margin/bottom = 266.0
custom_fonts/font = SubResource( 2 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fire_rate_amount" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 500.0
margin/top = 380.0
margin/right = 602.0
margin/bottom = 436.0
custom_fonts/font = SubResource( 2 )
text = "5"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="regen_amount" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 940.0
margin/top = 210.0
margin/right = 1042.0
margin/bottom = 266.0
custom_fonts/font = SubResource( 2 )
text = "10"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="speed_amount" type="Label" parent="shop"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 940.0
margin/top = 380.0
margin/right = 1042.0
margin/bottom = 436.0
custom_fonts/font = SubResource( 2 )
text = "500"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="damage_up" type="TextureButton" parent="shop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 190.0
margin/right = 475.0
margin/bottom = 230.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 5 )
textures/focused = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="damage_down" type="TextureButton" parent="shop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 250.0
margin/right = 475.0
margin/bottom = 290.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 6 )
textures/disabled = ExtResource( 7 )
textures/focused = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="fire_rate_up" type="TextureButton" parent="shop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 360.0
margin/right = 475.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 5 )
textures/focused = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="fire_rate_down" type="TextureButton" parent="shop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 400.0
margin/top = 420.0
margin/right = 475.0
margin/bottom = 460.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 6 )
textures/disabled = ExtResource( 7 )
textures/focused = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="regen_up" type="TextureButton" parent="shop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 835.0
margin/top = 190.0
margin/right = 910.0
margin/bottom = 230.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 5 )
textures/focused = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="regen_down" type="TextureButton" parent="shop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 835.0
margin/top = 250.0
margin/right = 910.0
margin/bottom = 290.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 6 )
textures/disabled = ExtResource( 7 )
textures/focused = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="speed_up" type="TextureButton" parent="shop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 835.0
margin/top = 360.0
margin/right = 910.0
margin/bottom = 400.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 4 )
textures/disabled = ExtResource( 5 )
textures/focused = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="speed_down" type="TextureButton" parent="shop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 835.0
margin/top = 420.0
margin/right = 910.0
margin/bottom = 458.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 6 )
textures/hover = ExtResource( 6 )
textures/disabled = ExtResource( 7 )
textures/focused = ExtResource( 6 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="max_health" type="Sprite" parent="shop"]

transform/pos = Vector2( 230, 639 )
texture = ExtResource( 8 )
centered = false

[node name="close" type="Button" parent="shop"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1036.0
margin/top = 20.0
margin/right = 1080.0
margin/bottom = 61.0
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "X"
flat = false

[node name="sound" type="SamplePlayer" parent="."]

process/pause_mode = 2
config/polyphony = 1
config/samples = SubResource( 4 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="level" type="Node2D" parent="."]

[node name="game_over_panel" type="Panel" parent="."]

process/pause_mode = 2
visibility/visible = false
visibility/self_opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 460.0
margin/top = 325.0
margin/right = 1460.0
margin/bottom = 755.0

[node name="game_over_text" type="Label" parent="game_over_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 94.0
margin/top = 60.0
margin/right = 906.0
margin/bottom = 198.0
custom_fonts/font = SubResource( 5 )
text = "Game Over"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="retry_button" type="Button" parent="game_over_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 187.0
margin/top = 290.0
margin/right = 440.0
margin/bottom = 370.0
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Retry"
flat = false

[node name="quit_button" type="Button" parent="game_over_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 560.0
margin/top = 290.0
margin/right = 813.0
margin/bottom = 370.0
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="victory_panel" type="Panel" parent="."]

process/pause_mode = 2
visibility/visible = false
visibility/self_opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 460.0
margin/top = 325.0
margin/right = 1460.0
margin/bottom = 755.0

[node name="victory_text" type="Label" parent="victory_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 94.0
margin/top = 60.0
margin/right = 906.0
margin/bottom = 198.0
custom_fonts/font = SubResource( 5 )
text = "You Win!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="retry_button" type="Button" parent="victory_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 290.0
margin/right = 497.0
margin/bottom = 370.0
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false

[node name="quit_button" type="Button" parent="victory_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 597.0
margin/top = 290.0
margin/right = 850.0
margin/bottom = 370.0
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="pause_panel" type="Panel" parent="."]

process/pause_mode = 2
visibility/visible = false
visibility/self_opacity = 0.75
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 460.0
margin/top = 325.0
margin/right = 1460.0
margin/bottom = 755.0

[node name="pause_text" type="Label" parent="pause_panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 94.0
margin/top = 60.0
margin/right = 906.0
margin/bottom = 198.0
custom_fonts/font = SubResource( 5 )
text = "Paused"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="resume_button" type="Button" parent="pause_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 150.0
margin/top = 290.0
margin/right = 497.0
margin/bottom = 370.0
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false

[node name="quit_button" type="Button" parent="pause_panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 597.0
margin/top = 290.0
margin/right = 850.0
margin/bottom = 370.0
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="camera" type="Camera2D" parent="."]

transform/pos = Vector2( 960, 540 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2
script/script = ExtResource( 10 )

[node name="HP" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 19.0
margin/top = 10.0
margin/right = 113.0
margin/bottom = 68.0
custom_fonts/font = SubResource( 7 )
text = "HP"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="shop/damage_up" to="." method="_on_damage_up_pressed"]

[connection signal="pressed" from="shop/damage_down" to="." method="_on_damage_down_pressed"]

[connection signal="pressed" from="shop/fire_rate_up" to="." method="_on_fire_rate_up_pressed"]

[connection signal="pressed" from="shop/fire_rate_down" to="." method="_on_fire_rate_down_pressed"]

[connection signal="pressed" from="shop/regen_up" to="." method="_on_regen_up_pressed"]

[connection signal="pressed" from="shop/regen_down" to="." method="_on_regen_down_pressed"]

[connection signal="pressed" from="shop/speed_up" to="." method="_on_speed_up_pressed"]

[connection signal="pressed" from="shop/speed_down" to="." method="_on_speed_down_pressed"]

[connection signal="pressed" from="shop/close" to="." method="_on_close_pressed"]

[connection signal="pressed" from="game_over_panel/retry_button" to="." method="_on_retry_button_pressed"]

[connection signal="pressed" from="game_over_panel/quit_button" to="." method="_on_quit_button_pressed"]

[connection signal="pressed" from="victory_panel/retry_button" to="." method="_on_retry_button_pressed"]

[connection signal="pressed" from="victory_panel/quit_button" to="." method="_on_quit_button_pressed"]

[connection signal="pressed" from="pause_panel/resume_button" to="." method="_on_resume_button_pressed"]

[connection signal="pressed" from="pause_panel/quit_button" to="." method="_on_quit_button_pressed"]


